<resources>
    <string name="app_name">AgroTracker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Registrar</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enterprise_name">Nome da empresa</string>
    <string name="enterprise_id">CNPJ</string>
    <string name="phone_number">Telefone</string>
    <string name="physical_address">Endereço</string>
    <string name="account_choise">ESCOLHA O TIPO DA CONTA:</string>
    <string name="sing_up">REALIZE SEU CADASTRO</string>
    <string name="cpf_num">CPF</string>
    <string name="nome">Nome</string>
    <string name="consultar_produto">Consultar Produto</string>
    <string name="consultar_produtor">Consultar Produtor</string>
    <string name="scanear_produto">Scanear Produto</string>
</resources>
