<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ED4CAF50"
    android:orientation="vertical">


    <TextView
        android:id="@+id/cPesText1"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/enterprise_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="205dp"
        tools:text="@string/nome" />

    <TextView
        android:id="@+id/cPesText2"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="283dp" />

    <TextView
        android:id="@+id/cPesText3"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="352dp" />

    <TextView
        android:id="@+id/cPesText6"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="421dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />


    <EditText
        android:id="@+id/pesName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:outlineSpotShadowColor="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="238dp" />

    <EditText
        android:id="@+id/pesMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:outlineSpotShadowColor="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="307dp" />

    <EditText
        android:id="@+id/pesSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:outlineSpotShadowColor="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="376dp" />

    <EditText
        android:id="@+id/prodPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="Telefone"
        android:inputType="textPersonName"
        android:outlineSpotShadowColor="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        tools:ignore="TextFields"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="445dp" />

    <ImageButton
        android:id="@+id/prodConfirm"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="292dp"
        android:layout_marginTop="596dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="?android:selectableItemBackground"
        android:padding="1dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/white_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>