<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ED4CAF50"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cEmpText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enterprise_name"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cEmpText2"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/enterprise_id"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cEmpText3"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/prompt_email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empCnpj"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cEmpText4"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/prompt_password"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empMail"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cEmpText5"
        android:layout_width="0dp"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/physical_address"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empSenha"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cEmpText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/phone_number"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empEnd"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <EditText
        android:id="@+id/empName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:outlineSpotShadowColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cEmpText1" />

    <EditText
        android:id="@+id/empCnpj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:outlineSpotShadowColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cEmpText2" />

    <EditText
        android:id="@+id/empMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:outlineSpotShadowColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/cEmpText3"
        app:layout_constraintTop_toBottomOf="@+id/cEmpText3" />

    <EditText
        android:id="@+id/empSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:outlineSpotShadowColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cEmpText4" />

    <EditText
        android:id="@+id/empEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:outlineSpotShadowColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cEmpText5" />

    <EditText
        android:id="@+id/empPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:outlineSpotShadowColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cEmpText6" />

</androidx.constraintlayout.widget.ConstraintLayout>